[gd_scene load_steps=4 format=3 uid="uid://d037p56pqv3pv"]

[ext_resource type="Texture2D" uid="uid://d3r761tq1hshb" path="res://Assets/UI/SolidPanelMenu.png" id="1_o3s4e"]
[ext_resource type="Script" path="res://Scripts/UI/hull_recovery_button.gd" id="1_sftec"]
[ext_resource type="Texture2D" uid="uid://i25tvymfcn8l" path="res://Assets/UI/HullRecovery.png" id="2_e0fmq"]

[node name="HullRecoveryButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sftec")

[node name="SolidPanelMenu" type="Sprite2D" parent="."]
position = Vector2(28.0875, 47)
scale = Vector2(0.0500861, 0.09)
texture = ExtResource("1_o3s4e")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 15.0
offset_right = 54.0
offset_bottom = 82.0
texture_normal = ExtResource("2_e0fmq")
ignore_texture_size = true
stretch_mode = 3

[node name="Count" type="Label" parent="TextureButton"]
layout_mode = 0
offset_left = 27.0
offset_top = 48.0
offset_right = 55.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="RecoveryTimer" type="Timer" parent="."]

[node name="CDTimer" type="Label" parent="."]
layout_mode = 0
offset_right = 20.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0.811765, 0.345098, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -6.0
offset_top = -26.0
offset_right = 65.0
text = "Recover"
horizontal_alignment = 1

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="RecoveryTimer" to="." method="_on_recovery_timer_timeout"]
